--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
- "name": "yelp",
+ "name": "twilio-proxy",
  "version": "0.0.1",
- "description": "A sample Node.js app using Express 4 for yelp",
+ "description": "A sample Node.js app using Express 4 for twilio",
  "private": true,
  "engines": {
    "node": ">=0.10.0"
  },
  "repository": {
    "type": "git",
-   "url": "https://github.com/gabepages/yelp-proxy"
+   "url": "https://github.com/Absolutestunna/yelp-proxy"
  },
  "scripts": {
    "start": "node index.js"
@@ -20,8 +20,6 @@
     "npm": "^3.8.0",
     "request": "^2.69.0",
     "cors": "^2.7.0",
-    "yelp": "^1.0.1",
-    "chance": "1.0.1"
   },
   "keywords": [
     "node",
