--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "install": "^0.5.6",
     "npm": "^3.8.0",
     "request": "^2.69.0",
-    "cors": "^2.7.0"
+    "cors": "^2.7.0",
+    "twilio": "^2.9.1" ,
+    "body-parser": "^1.15.0"
   },
   "keywords": [
     "node",
